base de generacion de horarios
